# EmbeddedIntentRecognizer

./: CMakeLists.txt
EmbeddedIntentRecognizer/CalenderRecognizer/: CMakeLists.txt  CalenderRecognizer.cpp  CalenderRecognizer.h
EmbeddedIntentRecognizer/FactRecognizer/: CMakeLists.txt  FactRecognizer.cpp  FactRecognizer.h
EmbeddedIntentRecognizer/Factory/: CMakeLists.txt  RecognizerFactory.cpp  RecognizerFactory.h
EmbeddedIntentRecognizer/MainApplication/: CMakeLists.txt  MainApp.cpp  MainApp.h
EmbeddedIntentRecognizer/RecognizerBase/: CMakeLists.txt  RecognizerBase.cpp  RecognizerBase.h
EmbeddedIntentRecognizer/WeatherRecognizer/: CMakeLists.txt  WeatherRecognizer.cpp  WeatherRecognizer.h
